# EcoDollar

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  configure.ac
.travis/: test_05_before_script.sh  test_06_script_a.sh  test_06_script_b.sh
build-aux/m4/: bitcoin_qt.m4  gmp.m4
build-aux/snap/: snapcraft.yaml
contrib/: ecodollar-cli.bash-completion  ecodollar-qt.pro  ecodollar-tx.bash-completion  ecodollard.bash-completion  gitian-build.py  install_db4.sh  valgrind.supp
contrib/bitrpc/: bitrpc.py
contrib/debian/: README.md  control  ecodollar-qt.desktop  ecodollar-qt.install  ecodollar-qt.lintian-overrides  ecodollar-qt.manpages  ecodollar-qt.protocol  ecodollard.bash-completion  ecodollard.examples  ecodollard.install  ecodollard.lintian-overrides  ecodollard.manpages  ecodollard.postinst  ecodollard.postrm  ecodollard.service  rules  watch
contrib/devtools/: README.md  check-doc.py  copyright_header.py  gen-manpages.sh  logprint-scanner.py  update-translations.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
depends/: README.md
doc/: Doxyfile.in  README.md  README_windows.txt  REST-interface.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  release-process.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addressbook.cpp  addressbook.h  addrman.cpp  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  base58.cpp  base58.h  bip38.cpp  bip38.h  blocksignature.cpp  blocksignature.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  concurrentqueue.h  (+115 more)
src/qt/: CMakeLists.txt  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoinunits.cpp  bitcoinunits.h  blockexplorer.cpp  blockexplorer.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  csvmodelwriter.cpp  csvmodelwriter.h  ecodollar.cpp  ecodollar.qrc  ecodollar_locale.qrc  ecodollarstrings.cpp  editaddressdialog.cpp  editaddressdialog.h  governancepage.cpp  governancepage.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  notificator.cpp  notificator.h  (+40 more)
src/qt/ecodollar/: addnewaddressdialog.cpp  addnewaddressdialog.h  addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  addresslabelrow.h  coincontrolecoswidget.cpp  coincontrolecoswidget.h  coldstakingmodel.cpp  coldstakingmodel.h  coldstakingwidget.cpp  coldstakingwidget.h  contactdropdownrow.cpp  contactdropdownrow.h  contactsdropdown.cpp  contactsdropdown.h  csrow.cpp  csrow.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  denomgenerationdialog.cpp  denomgenerationdialog.h  ecodollargui.cpp  ecodollargui.h  expandablebutton.cpp  expandablebutton.h  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  furlistrow.h  guitransactionsutils.cpp  guitransactionsutils.h  loadingdialog.cpp  (+59 more)
src/qt/ecodollar/forms/: addresseswidget.ui  coincontrolecoswidget.ui  coldstakingwidget.ui  csrow.ui  dashboardwidget.ui  masternodeswidget.ui  masternodewizarddialog.ui  mnrow.ui  navmenuwidget.ui  privacywidget.ui  receivewidget.ui  requestdialog.ui  send.ui  sendconfirmdialog.ui  topbar.ui  txrow.ui  welcomecontentwidget.ui
src/qt/ecodollar/res/css/: style_dark.css  style_light.css
src/qt/ecodollar/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsmultisenddialog.cpp  settingsmultisenddialog.h  settingsmultisendwidget.cpp  settingsmultisendwidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/ecodollar/settings/forms/: settingsdisplayoptionswidget.ui  settingsfaqwidget.ui  settingsmainoptionswidget.ui  settingswidget.ui
src/qt/forms/: addressbookpage.ui  blockexplorer.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  rpcconsole.ui  zecoscontroldialog.ui
src/qt/locale/: ecodollar_bg.ts  ecodollar_ca.ts  ecodollar_cs.ts  ecodollar_da.ts  ecodollar_de.ts  ecodollar_en.ts  ecodollar_en_GB.ts  ecodollar_en_US.ts  ecodollar_eo.ts  ecodollar_es.ts  ecodollar_es_ES.ts  ecodollar_fi.ts  ecodollar_fr_FR.ts  ecodollar_hi_IN.ts  ecodollar_hr.ts  ecodollar_hr_HR.ts  ecodollar_it.ts  ecodollar_ja.ts  ecodollar_ko_KR.ts  ecodollar_lt_LT.ts  ecodollar_nl.ts  ecodollar_pl.ts  ecodollar_pt.ts  ecodollar_pt_BR.ts  ecodollar_ro_RO.ts  ecodollar_ru.ts  ecodollar_sk.ts  ecodollar_sv.ts  ecodollar_tr.ts  ecodollar_uk.ts  ecodollar_vi.ts  ecodollar_zh_CN.ts  ecodollar_zh_TW.ts
src/qt/res/: ecodollar-qt-res.rc
src/qt/res/css/: default.css
src/qt/res/icons/: bitcoin.icns
src/qt/test/: paymentservertests.cpp  test_main.cpp  uritests.cpp
test/: README.md
(+304 files in other folders)
